# bazel_py_example

./: BUILD.bazel  README.md  WORKSPACE.bazel  main_test.py  requirements_lock.txt
rules_py/: BUILD.bazel  main.py  main_test.py
rules_py_pytest/: BUILD.bazel
rules_python_pytest/: BUILD.bazel  main_test.py
vanilla/: BUILD.bazel  main_test.py
