load("@aspect_rules_py//py:defs.bzl", "py_library", "py_pytest_main", "py_test")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "main",
    srcs = ["main.py"],
    imports = ["."],
)

py_binary(
    name = "main_bin",
    srcs = ["main.py"],
    main = "main.py",
)

py_pytest_main(name = "__test__")

py_test(
    name = "main_test",
    srcs = [
        "main_test.py",
        ":__test__",
    ],
    args = [
        "--junit-xml=$$XML_OUTPUT_FILE",
        "--ignore=external",
    ],
    main = ":__test__.py",
    deps = [
        ":main",
        requirement("pytest"),
    ],
)
