load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python_pytest//python_pytest:defs.bzl", "py_pytest_test")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "main",
    srcs = ["main.py"],
    imports = ["."],
)

py_binary(
    name = "main_bin",
    srcs = ["main.py"],
    main = "main.py",
)

py_pytest_test(
    name = "test_main",
    size = "small",
    srcs = ["main_test.py"],
    deps = [
        ":main",
        requirement("pytest"),
    ],
)
